server/istio/gateway_jonasmanser/vs_jblog.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-jonasmanser
  namespace: jblog
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /*
    route:
    - destination:
        port:
          number: 80
        host: jblog
